--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -279,8 +279,8 @@
                                 <div class="flex" style="flex-wrap: wrap;">
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Loan Cases Not Issued to Borrowers</mat-label>
-                                            <input matInput placeholder="Loan Cases Not Issued to Borrowers" appNumberOnly formControlName="LCNotIssuedToBorrowers" autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
+                                            <mat-label class="customMatLabel">No. of Utilizations Checked</mat-label>
+                                            <input matInput placeholder="No. of Utilizations Checked" appNumberOnly formControlName="NoOfUtilizationChecked" autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
                                 </div>
