--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -435,7 +435,7 @@
                                     </thead>
                                     <tbody>
                                     <tr *ngFor="let ZcTourDiary of TourDiaryList">
-                                        <td>{{ZcTourDiary.LCNotIssuedToBorrowers}}</td>
+                                        <td>{{ZcTourDiary.NoOfUtilizationChecked}}</td>
                                         <td>{{ZcTourDiary.TOTFarmersContacted}}</td>
                                         <td>{{ZcTourDiary.TOTNoOfFarmersVisisted}}</td>
                                         <td></td>
