--- a/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
@@ -19,6 +19,7 @@
                     <thead>
                     <tr class=" text-center">
                         <th rowspan="2"  >Date</th>
+                        <th rowspan="2"  >TourPlan</th>
                         <th colspan="2" rowspan="2"  >Departure from</th>
                         <th colspan="2" rowspan="2"  >Arrival at</th>
                         <th colspan="6"  >Portfolio of the branch visited</th>
@@ -52,21 +53,22 @@
                     </thead>
                     <tbody>
                     <tr *ngFor="let ZmTourDiary of TourDiaryList">
-                        <td>{{ZmTourDiary.TourDate}}</td>
-                        <td>{{ZmTourDiary.DepartureFromPlace}}</td>
-                        <td>{{ZmTourDiary.DepartureFromTime}}</td>
-                        <td>{{ZmTourDiary.ArrivalAtPlace}}</td>
-                        <td>{{ZmTourDiary.ArrivalAtTime}}</td>
-                        <td  ></td>
-                        <td  ></td>
-                        <td  ></td>
-                        <td  ></td>
-                        <td  ></td>
-                        <td  ></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>{{ZmTourDiary?.TourDate}}</td>
+                        <td>{{ZmTourDiary?.PlanPurposeName}}</td>
+                        <td>{{ZmTourDiary?.DepartureFromPlace}}</td>
+                        <td>{{ZmTourDiary?.DepartureFromTime}}</td>
+                        <td>{{ZmTourDiary?.ArrivalAtPlace}}</td>
+                        <td>{{ZmTourDiary?.ArrivalAtTime}}</td>
+                        <td>{{systemGenerated?.PortfolioGeneralNo}}</td>
+                        <td>{{systemGenerated?.PortfolioGeneralAmount}}</td>
+                        <td>{{systemGenerated?.PortfolioNplNo}}</td>
+                        <td>{{systemGenerated?.PortfolioNplAmount}}</td>
+                        <td>{{systemGenerated?.PortfolioSamNo}}</td>
+                        <td>{{systemGenerated?.PortfolioSamAmount}}</td>
+                        <td>{{systemGenerated?.RecDemandNoticesIssued}}</td>
+                        <td>{{systemGenerated?.RecLegalNoticesIssued}}</td>
+                        <td>{{systemGenerated?.RecNoticesIssuedBySAP}}</td>
+                        <td>{{systemGenerated?.RecCasesFiledByBranch}}</td>
                     </tr>
                     </tbody>
                 </table>
@@ -97,10 +99,10 @@
                     </thead>
                     <tbody>
                     <tr *ngFor="let ZmTourDiary of TourDiaryList">
-                        <td>{{ZmTourDiary.LCNotIssuedToBorrowers}}</td>
-                        <td>{{ZmTourDiary.McoNBmTourDiaryAPPlan}}</td>
-                        <td>{{ZmTourDiary.AnyShortComingInDiaries}}</td>
-                        <td></td>
+                        <td>{{ZmTourDiary?.LCNotIssuedToBorrowers}}</td>
+                        <td>{{ZmTourDiary?.McoNBmTourDiaryAPPlan}}</td>
+                        <td>{{ZmTourDiary?.AnyShortComingInDiaries}}</td>
+                        <td>{{systemGenerated?.NoOfZeroRecoveryCases}}</td>
                         <td>
                             <ul>
                                 <li>Reschedulement</li>
@@ -108,9 +110,9 @@
                                 <li>RightOff/remission</li>
                             </ul>
                         </td>
-                        <td></td>
-                        <td>{{ZmTourDiary.NoOfDefaulterContacted}}</td>
-                        <td>{{ZmTourDiary.Remarks}}</td>
+                        <td>{{systemGenerated?.LoanCasesReschRemissionNO}}</td>
+                        <td>{{ZmTourDiary?.NoOfDefaulterContacted}}</td>
+                        <td>{{ZmTourDiary?.Remarks}}</td>
                     </tr>
 
                     </tbody>
