Tour Diary Bugs

--- a/src/app/modules/tour-plan/tour-plan-for-approval/tour-plan-for-approval.component.html
+++ b/src/app/modules/tour-plan/tour-plan-for-approval/tour-plan-for-approval.component.html
@@ -66,7 +66,7 @@
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label>Select tourPlan Status</mat-label>
-                                <mat-select formControlName="Status">
+                                <mat-select formControlName="Status" disabled>
                                     <mat-option value="">
                                         Select
                                     </mat-option>
