--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -331,7 +331,7 @@
 
                         <div class="row mt-2 mr-1">
                             <div class="col-lg-12 text-right">
-                                <button type="button" *ngIf="isUpdate==false && currentActivity.C" class="ml-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>{{btnText}}</button>
+                                <button type="button" *ngIf="isUpdate==false && currentActivity.C && edit_mode" class="ml-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>{{btnText}}</button>
                                 <button type="button" *ngIf="isUpdate==true && currentActivity.U && edit_mode" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Update</button>
 
                                 <button type="button" mat-raised-button *ngIf="currentActivity.U && edit_mode" class="mr-2" color="primary" [disabled]="checkDisable" (click)="changeStatus('','S')">
