--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -28,7 +28,8 @@
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">Name of Officer<strong
                                             class="matMandatory">*</strong></mat-label>
-                                        <input matInput formControlName="NameOfOfficer" autocomplete="off" placeholder="Name of Officer"
+                                        <input matInput formControlName="NameOfOfficer" autocomplete="off"
+                                               placeholder="Name of Officer"
                                                readonly="readonly"/>
                                     </mat-form-field>
                                 </div>
@@ -37,7 +38,8 @@
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">P.P.NO<strong class="matMandatory">*</strong>
                                         </mat-label>
-                                        <input matInput formControlName="Ppno" autocomplete="off" readonly="readonly" placeholder="P.P.NO"/>
+                                        <input matInput formControlName="Ppno" autocomplete="off" readonly="readonly"
+                                               placeholder="P.P.NO"/>
                                     </mat-form-field>
                                 </div>
 
@@ -49,15 +51,18 @@
                                         </mat-label>
                                         <input matInput [matDatepicker]="picker" formControlName="TourDate"
                                                maxlength="30" autocomplete="off"
-                                               [max]="maxDate" (dateChange)="setDate()" appNumberOnly placeholder="Date of Visit"/>
-                                        <mat-datepicker-toggle matSuffix [for]="picker" [disabled]="(!zone || !edit_mode) && currentActivity.R"></mat-datepicker-toggle>
+                                               [max]="maxDate" (dateChange)="setDate()" appNumberOnly
+                                               placeholder="Date of Visit"/>
+                                        <mat-datepicker-toggle matSuffix [for]="picker"
+                                                               [disabled]="(!zone || !edit_mode) && currentActivity.R"></mat-datepicker-toggle>
                                         <mat-datepicker #picker></mat-datepicker>
                                     </mat-form-field>
                                 </div>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class=" mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label>Tour Plan<strong class="matMandatory">*</strong></mat-label>
-                                        <mat-select formControlName="TourPlanId" [disabled]="!edit_mode && currentActivity.R">
+                                        <mat-select formControlName="TourPlanId"
+                                                    [disabled]="!edit_mode && currentActivity.R">
                                             <mat-option>
                                                 Select
                                             </mat-option>
@@ -80,7 +85,8 @@
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Departure Place<strong
                                                 class="matMandatory">*</strong></mat-label>
-                                            <input matInput formControlName="DepartureFromPlace" autocomplete="off" placeholder="Departure Place"/>
+                                            <input matInput formControlName="DepartureFromPlace" autocomplete="off"
+                                                   placeholder="Departure Place"/>
                                         </mat-form-field>
                                     </div>
 
@@ -89,10 +95,13 @@
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Departure Time<strong
                                                 class="matMandatory">*</strong></mat-label>
-                                            <input type="text" matInput [ngxTimepicker]="timepickerDeparture" placeholder="Departure Time"
+                                            <input type="text" matInput [ngxTimepicker]="timepickerDeparture"
+                                                   placeholder="Departure Time"
                                                    [format]="DateFormat()" readonly
                                                    formControlName="DepartureFromTime"/>
-                                            <mat-icon *ngIf="edit_mode" class="cursor-pointer" matSuffix (click)="openFromIcon(timepickerDeparture)">schedule</mat-icon>
+                                            <mat-icon *ngIf="edit_mode" class="cursor-pointer" matSuffix
+                                                      (click)="openFromIcon(timepickerDeparture)">schedule
+                                            </mat-icon>
                                             <mat-icon *ngIf="!edit_mode" matSuffix>schedule</mat-icon>
                                         </mat-form-field>
                                     </div>
@@ -109,7 +118,8 @@
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Arrival Place<strong class="matMandatory">*</strong>
                                             </mat-label>
-                                            <input matInput formControlName="ArrivalAtPlace" autocomplete="off" placeholder="Arrival Place"/>
+                                            <input matInput formControlName="ArrivalAtPlace" autocomplete="off"
+                                                   placeholder="Arrival Place"/>
                                         </mat-form-field>
                                     </div>
 
@@ -118,10 +128,13 @@
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Arrival Time<strong
                                                 class="matMandatory">*</strong></mat-label>
-                                            <input type="text" matInput [ngxTimepicker]="timepickerArrival" placeholder="Arrival Time"
+                                            <input type="text" matInput [ngxTimepicker]="timepickerArrival"
+                                                   placeholder="Arrival Time"
                                                    [format]="DateFormat()" readonly
                                                    formControlName="ArrivalAtTime"/>
-                                            <mat-icon *ngIf="edit_mode" class="cursor-pointer" matSuffix (click)="openFromIcon(timepickerArrival)">schedule</mat-icon>
+                                            <mat-icon *ngIf="edit_mode" class="cursor-pointer" matSuffix
+                                                      (click)="openFromIcon(timepickerArrival)">schedule
+                                            </mat-icon>
                                             <mat-icon *ngIf="!edit_mode" matSuffix>schedule</mat-icon>
                                         </mat-form-field>
                                     </div>
@@ -135,7 +148,8 @@
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">No. Of Defaulters Contacted</mat-label>
-                                            <input matInput appNumberOnly formControlName="NoOfDefaulterContacted" placeholder="No. Of Defaulters Contacted"
+                                            <input matInput appNumberOnly formControlName="NoOfDefaulterContacted"
+                                                   placeholder="No. Of Defaulters Contacted"
                                                    autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
@@ -144,7 +158,8 @@
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Results Of Contacts So Made</mat-label>
-                                            <input matInput appNumberOnly formControlName="ResultContactMade" placeholder="Results Of Contacts So Made"
+                                            <input matInput appNumberOnly formControlName="ResultContactMade"
+                                                   placeholder="Results Of Contacts So Made"
                                                    autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
@@ -152,7 +167,8 @@
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Measure Boosting Up Record</mat-label>
-                                            <input matInput formControlName="MeasureBoostUpRecord" placeholder="Measure Boosting Up Record"
+                                            <input matInput formControlName="MeasureBoostUpRecord"
+                                                   placeholder="Measure Boosting Up Record"
                                                    autocomplete="off" [readonly]="!edit_mode && currentActivity.R"/>
                                         </mat-form-field>
                                     </div>
@@ -178,17 +194,20 @@
 
             <div class="row mt-2 mr-1">
                 <div class="col-lg-12 text-right">
-                    <button type="button" *ngIf="isUpdate==false && currentActivity.C" class="mr-2 bg-green" mat-raised-button color="primary"
+                    <button type="button" *ngIf="isUpdate==false && currentActivity.C && edit_mode"
+                            class="mr-2 bg-green" mat-raised-button color="primary"
                             (click)="saveTourDiary()">
                         <mat-icon class="mr-2">save</mat-icon>
                         Save
                     </button>
-                    <button type="button" *ngIf="isUpdate==true && currentActivity.U" class="mr-2 bg-green" mat-raised-button color="primary"
+                    <button type="button" *ngIf="isUpdate==true && currentActivity.U" class="mr-2 bg-green"
+                            mat-raised-button color="primary"
                             (click)="saveTourDiary()">
                         <mat-icon class="mr-2">save</mat-icon>
                         Update
                     </button>
-                    <button  type="button" *ngIf="isUpdate==true && currentActivity.U"  mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
+                    <button type="button" *ngIf="isUpdate==true && currentActivity.U" mat-raised-button class="mr-2"
+                            color="primary" (click)="changeStatus('','S')">
                         <mat-icon class="mr-2">check_circle</mat-icon>
                         Submit
                     </button>
