--- a/src/app/modules/tour-dairy/tour-diary-approval-mco/tour-diary-approval-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-mco/tour-diary-approval-mco.component.html
@@ -1,10 +1,14 @@
-<div
+<div [formGroup]="gridForm"
      class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent">
     <div class="row pt-3">
         <div class="col-lg-12 p-0 col-sm-12">
             <div class="heading">Tour Approval Diary of MCO</div>
         </div>
     </div>
+
+    <app-zone-branch-circle hidden [form]="gridForm" [show_circle]="false"
+                            [is_required_circle]="false" [should_filter]="false"
+                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
     <div class="mt-2 row">
         <div class="col-lg-12 p-0 ist-table overflow-auto shadow-xs rounded-sm mt-3">
