--- a/src/app/modules/tour-dairy/tour-diary-approval-pc/tour-diary-approval-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-pc/tour-diary-approval-pc.component.html
@@ -1,4 +1,4 @@
-<div
+<div [formGroup]="gridForm"
     class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent">
 
 
@@ -7,6 +7,10 @@
             <div class="heading">TOUR DIARY & PROGRESS REPORT OF PROVINCIAL CHIEF</div>
         </div>
     </div>
+
+    <app-zone-branch-circle hidden [form]="gridForm" [show_circle]="false"
+                            [is_required_circle]="false" [should_filter]="false"
+                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
 
     <div id="Kt-portlet-margin-top">
