--- a/src/app/modules/tour-dairy/tour-diary-approval-rc/tour-diary-approval-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-rc/tour-diary-approval-rc.component.html
@@ -11,7 +11,7 @@
 
         </div>
     </div>
-    <app-zone-branch-circle  [form]="gridForm" [show_circle]="false"
+    <app-zone-branch-circle hidden [form]="gridForm" [show_circle]="false"
     [is_required_circle]="false" [should_filter]="false"
     (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
