--- a/src/app/modules/tour-dairy/tour-diary-approval-zc/tour-diary-approval-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zc/tour-diary-approval-zc.component.html
@@ -1,4 +1,4 @@
-<div class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent" #container>
+<div [formGroup]="gridForm" class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent" #container>
 
 
     <div class="row pt-3">
@@ -6,6 +6,10 @@
             <div class="heading">TOUR DIARY & PROGRESS REPORT OF ZONAL CHIEF</div>
         </div>
     </div>
+
+    <app-zone-branch-circle hidden [form]="gridForm" [show_circle]="false"
+                            [is_required_circle]="false" [should_filter]="false"
+                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
     <div class="col-lg-12 p-0 ist-table  overflow-auto shadow-xs rounded-sm bg-gray-50 mt-2">
         <table class="table ">
