--- a/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
@@ -1,5 +1,4 @@
-<div class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent">
-
+<div [formGroup]="gridForm" class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent">
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
@@ -10,6 +9,10 @@
 
         </div>
     </div>
+
+    <app-zone-branch-circle hidden [form]="gridForm" [show_circle]="false"
+                            [is_required_circle]="false" [should_filter]="false"
+                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
 
     <div id="Kt-portlet-margin-top">
