--- a/src/app/modules/tour-plan/create-tour-plan-zm/create-tour-plan-zm.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan-zm/create-tour-plan-zm.component.html
@@ -1,6 +1,6 @@
 <div
     class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-y-auto bg-card dark:bg-transparent">
-    <div class="heading mt-3">Create Tour Plan For ZC</div>
+    <div class="heading mt-3">Create Tour Plan For ZM</div>
     <!-- Header -->
     <div class="flex pt-2" style="flex-wrap:wrap;" [formGroup]="tourPlanForm">
         <app-zone-branch-circle [form]="tourPlanForm" [should_filter]="true"
