--- a/src/app/modules/user-management/activity/activity-list/activity-list.component.html
+++ b/src/app/modules/user-management/activity/activity-list/activity-list.component.html
@@ -14,7 +14,7 @@
                     class="ml-4"
                     mat-flat-button
                     [color]="'primary'"
-                    (click)="addActivity()" *ngIf="currentActivity.C">
+                    (click)="addActivity()">
                     <mat-icon [svgIcon]="'heroicons_outline:plus'"></mat-icon>
                     <span class="ml-2 mr-1">Add New </span>
                 </button>
@@ -48,13 +48,13 @@
                             </div>
 
                             <div class="mr-8">
-                                <button mat-icon-button (click)="deleteActivity(activity)" *ngIf="currentActivity.D">
+                                <button mat-icon-button (click)="deleteActivity(activity)">
                                     <mat-icon class="text-red-500">
                                         delete_forever
                                     </mat-icon>
                                 </button>
                                 <button class="ml-2" mat-icon-button color="primary" (click)="editActivity(activity)"
-                                        *ngIf="currentActivity.U">
+                                        >
                                     <mat-icon>
                                         edit
                                     </mat-icon>
@@ -83,13 +83,13 @@
                                     <td>{{child.ActivityName}}</td>
                                     <td>{{child.ActivityUrl}}</td>
                                     <td>
-                                        <button mat-icon-button color="primary" *ngIf="currentActivity.U"
+                                        <button mat-icon-button color="primary"
                                                 (click)="editActivity(child)">
                                             <mat-icon class="text-green">
                                                 {{ activity.isCoreactivity ? 'visibility' : 'create' }}
                                             </mat-icon>
                                         </button>&nbsp;
-                                        <button mat-icon-button color="warn" *ngIf="currentActivity.D"
+                                        <button mat-icon-button color="warn"
                                                 (click)="deleteActivity(child)">
                                             <mat-icon>
                                                 delete
