--- a/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
+++ b/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
@@ -126,7 +126,7 @@
             </div>
             <div class="row py-2 ">
                 <div class="col-lg-12 p-0 mb-4">
-                    <button type="button" *ngIf="!ShowButton &&  (_currentActivity.U || _currentActivity.C)"
+                    <button type="button" *ngIf="!ShowButton"
                             color="primary"
                             class="mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-green"
                             (click)="onSubmit()"
