--- a/src/app/modules/tour-plan/create-tour-plan-pc/create-tour-plan-pc.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan-pc/create-tour-plan-pc.component.html
@@ -3,8 +3,8 @@
     <div class="heading mt-3">Create Tour Plan For PC</div>
     <!-- Header -->
     <div class="flex pt-2" style="flex-wrap:wrap;" [formGroup]="tourPlanForm">
-        <app-zone-branch-circle [form]="tourPlanForm" [should_filter]="true"
-                                [is_required_circle]="true"
+        <app-zone-branch-circle [form]="tourPlanForm" [should_filter]="false"
+                                [is_required_circle]="false"
                                 (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
